--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="container">
         
        <div class="capa1">    
-            <img src="assets/images/rock.jpg" alt="rock">
+            <img class="imagen1" src="assets/images/rock.jpg" alt="rock">
            
         </div> 
 
